[gd_scene load_steps=19 format=3 uid="uid://7xg6mrkwevfw"]

[ext_resource type="Texture2D" uid="uid://cprv64x6srfvm" path="res://assets/images/balls/cue_ball.png" id="1"]
[ext_resource type="PackedScene" uid="uid://wvhmr3o3ycg5" path="res://scenes/game_scenes/Ball.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://b1qjio4tp8gh1" path="res://scenes/game_scenes/Table.tscn" id="3"]
[ext_resource type="Script" path="res://scripts/pool/game_manager_8_ball.gd" id="4"]
[ext_resource type="Script" path="res://scripts/pool/ball_in_hand.gd" id="7"]
[ext_resource type="Script" path="res://scripts/pool/ball_placer.gd" id="8"]
[ext_resource type="Script" path="res://scripts/menus/hud_8_ball.gd" id="9"]
[ext_resource type="Script" path="res://scripts/pool/queue_controller.gd" id="10"]
[ext_resource type="Script" path="res://scripts/pool/ball_manager_8_ball.gd" id="11"]
[ext_resource type="Texture2D" uid="uid://dkh5x1min8pww" path="res://assets/images/table/queue.png" id="12"]
[ext_resource type="Script" path="res://scripts/menus/DEBUG_hud_8_ball.gd" id="13"]
[ext_resource type="PackedScene" uid="uid://hc5wol3p1jq5" path="res://scenes/background/Background.tscn" id="14"]
[ext_resource type="Script" path="res://scripts/menus/game_finished_panel.gd" id="16"]
[ext_resource type="PackedScene" path="res://scenes/ui_scenes/GameFinishedTeamLabel.tscn" id="17"]

[sub_resource type="StyleBoxFlat" id="1"]
content_margin_left = 3.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.14902, 0.14902, 0.14902, 1)
border_width_bottom = 2
border_color = Color(0, 0.647059, 0, 1)
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="3"]
content_margin_left = 3.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.14902, 0.14902, 0.14902, 1)
border_width_top = 2
border_color = Color(0, 0.647059, 0, 1)
shadow_size = 5

[sub_resource type="CircleShape2D" id="4"]
radius = 116.364

[sub_resource type="Gradient" id="5"]
colors = PackedColorArray(0.431373, 1, 0.988235, 0.482353, 0.439216, 1, 0.960784, 0)

[node name="EightBall" type="Node"]
script = ExtResource("4")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Hud_8Ball" type="VBoxContainer" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("9")

[node name="TopBarContainer" type="PanelContainer" parent="UI/Hud_8Ball"]
layout_mode = 2
theme_override_styles/panel = SubResource("1")

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Hud_8Ball/TopBarContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="TeamLabel" type="Label" parent="UI/Hud_8Ball/TopBarContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Team 1"
horizontal_alignment = 2
vertical_alignment = 1

[node name="VSeparator" type="VSeparator" parent="UI/Hud_8Ball/TopBarContainer/HBoxContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="UI/Hud_8Ball/TopBarContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 2.0
theme_override_font_sizes/font_size = 24
text = "fwgfwerg"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="VSeparator2" type="VSeparator" parent="UI/Hud_8Ball/TopBarContainer/HBoxContainer"]
layout_mode = 2

[node name="BallTypesContainer" type="HBoxContainer" parent="UI/Hud_8Ball/TopBarContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BallTypeLabel" type="Label" parent="UI/Hud_8Ball/TopBarContainer/HBoxContainer/BallTypesContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "Ball Type: "
vertical_alignment = 1

[node name="BallTypeText" type="Label" parent="UI/Hud_8Ball/TopBarContainer/HBoxContainer/BallTypesContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Solilds"
vertical_alignment = 1

[node name="BottomBarContainer" type="PanelContainer" parent="UI/Hud_8Ball"]
custom_minimum_size = Vector2(0, 44)
layout_mode = 2
size_flags_vertical = 10
theme_override_styles/panel = SubResource("3")

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Hud_8Ball/BottomBarContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="PlayerBallContainer" type="HBoxContainer" parent="UI/Hud_8Ball/BottomBarContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
theme_override_constants/separation = 35

[node name="VSeparator" type="VSeparator" parent="UI/Hud_8Ball/BottomBarContainer/HBoxContainer"]
layout_mode = 2

[node name="NextPlayerLabel" type="Label" parent="UI/Hud_8Ball/BottomBarContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 1.2
text = "Next: WWWWWWWWWWWWWWWWW"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="VSeparator2" type="VSeparator" parent="UI/Hud_8Ball/BottomBarContainer/HBoxContainer"]
layout_mode = 2

[node name="AiBallContainer" type="HBoxContainer" parent="UI/Hud_8Ball/BottomBarContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_constants/separation = 35

[node name="DEBUG_Hud_8Ball" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("13")

[node name="Inset" type="Control" parent="UI/DEBUG_Hud_8Ball"]
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 15.0
offset_right = -15.0
offset_bottom = -15.0

[node name="CurrentPlayer" type="VBoxContainer" parent="UI/DEBUG_Hud_8Ball/Inset"]
layout_mode = 0
anchor_left = 0.5
anchor_right = 0.5
offset_left = -131.5
offset_right = 131.5
offset_bottom = 39.0

[node name="NameLabel" type="Label" parent="UI/DEBUG_Hud_8Ball/Inset/CurrentPlayer"]
layout_mode = 2
text = "Current Player:"

[node name="Name" type="Label" parent="UI/DEBUG_Hud_8Ball/Inset/CurrentPlayer/NameLabel"]
layout_mode = 0
offset_left = 135.0
offset_right = 262.0
offset_bottom = 14.0
text = "aaaaaa"

[node name="GameStateLabel" type="Label" parent="UI/DEBUG_Hud_8Ball/Inset/CurrentPlayer"]
layout_mode = 2
text = "Game State:"

[node name="GameState" type="Label" parent="UI/DEBUG_Hud_8Ball/Inset/CurrentPlayer/GameStateLabel"]
layout_mode = 0
offset_left = 135.0
offset_right = 262.0
offset_bottom = 26.0
text = "aaaaaa"

[node name="GeneralInfo" type="VBoxContainer" parent="UI/DEBUG_Hud_8Ball/Inset"]
layout_mode = 0
offset_right = 130.0
offset_bottom = 111.0

[node name="PlayerTypeLabel" type="Label" parent="UI/DEBUG_Hud_8Ball/Inset/GeneralInfo"]
layout_mode = 2
text = "Player Ball Type:"

[node name="PlayerType" type="Label" parent="UI/DEBUG_Hud_8Ball/Inset/GeneralInfo/PlayerTypeLabel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 6.61501
offset_top = -13.0
offset_right = 65.615
offset_bottom = 13.0
grow_horizontal = 0
grow_vertical = 2
text = "aaaaaa"

[node name="PlayerPocketedLabel" type="Label" parent="UI/DEBUG_Hud_8Ball/Inset/GeneralInfo"]
layout_mode = 2
text = "Player Pocketed:"

[node name="PlayerPocketed" type="Label" parent="UI/DEBUG_Hud_8Ball/Inset/GeneralInfo/PlayerPocketedLabel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 6.61501
offset_top = -13.0
offset_right = 65.615
offset_bottom = 13.0
grow_horizontal = 0
grow_vertical = 2
text = "aaaaaa"

[node name="PlayerEightTargetLabel" type="Label" parent="UI/DEBUG_Hud_8Ball/Inset/GeneralInfo"]
layout_mode = 2
text = "Player  8 Target:"

[node name="PlayerEightTarget" type="Label" parent="UI/DEBUG_Hud_8Ball/Inset/GeneralInfo/PlayerEightTargetLabel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 6.61501
offset_top = -12.0
offset_right = 65.615
offset_bottom = 14.0
grow_horizontal = 0
grow_vertical = 2
text = "aaaaaa"

[node name="HSeparator" type="HSeparator" parent="UI/DEBUG_Hud_8Ball/Inset/GeneralInfo"]
layout_mode = 2

[node name="AiTypeLabel" type="Label" parent="UI/DEBUG_Hud_8Ball/Inset/GeneralInfo"]
layout_mode = 2
text = "AI Ball Type:"

[node name="AiType" type="Label" parent="UI/DEBUG_Hud_8Ball/Inset/GeneralInfo/AiTypeLabel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.10236
anchor_bottom = 0.5
offset_left = 7.0
offset_top = -13.0
offset_right = 48.4964
offset_bottom = 13.0
text = "aaaaaa"

[node name="AiPocketedLabel" type="Label" parent="UI/DEBUG_Hud_8Ball/Inset/GeneralInfo"]
layout_mode = 2
text = "AI Pocketed:"

[node name="AiPocketed" type="Label" parent="UI/DEBUG_Hud_8Ball/Inset/GeneralInfo/AiPocketedLabel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 7.0
offset_top = -13.0
offset_right = 66.0
offset_bottom = 13.0
grow_horizontal = 0
grow_vertical = 2
text = "aaaaaa"

[node name="AiEightTargetLabel" type="Label" parent="UI/DEBUG_Hud_8Ball/Inset/GeneralInfo"]
layout_mode = 2
text = "AI 8 Target:"

[node name="AiEightTarget" type="Label" parent="UI/DEBUG_Hud_8Ball/Inset/GeneralInfo/AiEightTargetLabel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 7.0
offset_top = -13.0
offset_right = 66.0
offset_bottom = 13.0
grow_horizontal = 0
grow_vertical = 2
text = "aaaaaa"

[node name="TurnInfo" type="VBoxContainer" parent="UI/DEBUG_Hud_8Ball/Inset"]
layout_mode = 0
anchor_left = 1.0
anchor_right = 1.0
offset_left = -263.0
offset_bottom = 50.0

[node name="FirstHitLabel" type="Label" parent="UI/DEBUG_Hud_8Ball/Inset/TurnInfo"]
layout_mode = 2
text = "First Hit:"

[node name="FirstHit" type="Label" parent="UI/DEBUG_Hud_8Ball/Inset/TurnInfo/FirstHitLabel"]
layout_mode = 0
offset_left = 146.0
offset_right = 273.0
offset_bottom = 26.0
text = "aaaaaa"

[node name="LegalPocketingLabel" type="Label" parent="UI/DEBUG_Hud_8Ball/Inset/TurnInfo"]
layout_mode = 2
text = "Legal Pocketing:"

[node name="LegalPocketing" type="Label" parent="UI/DEBUG_Hud_8Ball/Inset/TurnInfo/LegalPocketingLabel"]
layout_mode = 0
offset_left = 146.0
offset_right = 273.0
offset_bottom = 26.0
text = "aaaaaa"

[node name="FouledLabel" type="Label" parent="UI/DEBUG_Hud_8Ball/Inset/TurnInfo"]
layout_mode = 2
text = "Fouled:"

[node name="Fouled" type="Label" parent="UI/DEBUG_Hud_8Ball/Inset/TurnInfo/FouledLabel"]
layout_mode = 0
offset_left = 146.0
offset_right = 273.0
offset_bottom = 26.0
text = "aaaaaa"

[node name="FirstHitLegalLabel" type="Label" parent="UI/DEBUG_Hud_8Ball/Inset/TurnInfo"]
layout_mode = 2
text = "First Hit Legal:"

[node name="FirstHitLegal" type="Label" parent="UI/DEBUG_Hud_8Ball/Inset/TurnInfo/FirstHitLegalLabel"]
layout_mode = 0
offset_left = 146.0
offset_right = 273.0
offset_bottom = 26.0
text = "aaaaaa"

[node name="WonLabel" type="Label" parent="UI/DEBUG_Hud_8Ball/Inset/TurnInfo"]
layout_mode = 2
text = "Won:"

[node name="Won" type="Label" parent="UI/DEBUG_Hud_8Ball/Inset/TurnInfo/WonLabel"]
layout_mode = 0
offset_left = 146.0
offset_right = 273.0
offset_bottom = 26.0
text = "aaaaaa"

[node name="LostLabel" type="Label" parent="UI/DEBUG_Hud_8Ball/Inset/TurnInfo"]
layout_mode = 2
text = "Lost:"

[node name="Lost" type="Label" parent="UI/DEBUG_Hud_8Ball/Inset/TurnInfo/LostLabel"]
layout_mode = 0
offset_left = 146.0
offset_right = 273.0
offset_bottom = 26.0
text = "aaaaaa"

[node name="GameFinished" type="PanelContainer" parent="UI"]
process_mode = 3
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 200.0
offset_top = 150.0
offset_right = -200.0
offset_bottom = -150.0
script = ExtResource("16")

[node name="VBoxContainer" type="VBoxContainer" parent="UI/GameFinished"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/GameFinished/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PlayerContainer" type="VBoxContainer" parent="UI/GameFinished/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Team" parent="UI/GameFinished/VBoxContainer/HBoxContainer/PlayerContainer" instance=ExtResource("17")]
layout_mode = 2

[node name="Players" type="VBoxContainer" parent="UI/GameFinished/VBoxContainer/HBoxContainer/PlayerContainer"]
layout_mode = 2

[node name="AiContainer" type="VBoxContainer" parent="UI/GameFinished/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Team" parent="UI/GameFinished/VBoxContainer/HBoxContainer/AiContainer" instance=ExtResource("17")]
layout_mode = 2

[node name="Players" type="VBoxContainer" parent="UI/GameFinished/VBoxContainer/HBoxContainer/AiContainer"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="UI/GameFinished/VBoxContainer"]
layout_mode = 2

[node name="WaitingLabel" type="Label" parent="UI/GameFinished/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Waiting for host..."

[node name="LobbyButton" type="Button" parent="UI/GameFinished/VBoxContainer"]
process_mode = 3
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Back to Lobby"

[node name="Background" parent="." instance=ExtResource("14")]

[node name="Table" parent="." instance=ExtResource("3")]
position = Vector2(512, 288)

[node name="BallManager" type="Node2D" parent="."]
z_index = 20
z_as_relative = false
position = Vector2(512, 288)
script = ExtResource("11")

[node name="BallHolder" type="Node2D" parent="BallManager"]

[node name="BallPlacer" type="Node2D" parent="BallManager"]
script = ExtResource("8")
ball_scn = ExtResource("2")
table_np = NodePath("../../Table")

[node name="BallInHand" type="Area2D" parent="BallManager"]
scale = Vector2(0.0859375, 0.0859375)
script = ExtResource("7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BallManager/BallInHand"]
shape = SubResource("4")

[node name="Sprite2D" type="Sprite2D" parent="BallManager/BallInHand"]
texture = ExtResource("1")

[node name="QueueController" type="Node2D" parent="." node_paths=PackedStringArray("table")]
position = Vector2(512, 288)
script = ExtResource("10")
table = NodePath("../Table")

[node name="LineMask" type="Control" parent="QueueController"]
clip_contents = true
layout_mode = 3
anchors_preset = 0
offset_left = -360.0
offset_top = -200.0
offset_right = 360.0
offset_bottom = 200.0

[node name="Line2D" type="Line2D" parent="QueueController/LineMask"]
z_index = 5
z_as_relative = false
position = Vector2(368, -24)
rotation = 1.5708
points = PackedVector2Array(0, 0, 0, -1500)
width = 2.0
default_color = Color(0.294118, 0.835294, 1, 0.376471)
gradient = SubResource("5")
antialiased = true

[node name="QueueSprite" type="Sprite2D" parent="QueueController"]
z_index = 30
z_as_relative = false
position = Vector2(181, -223)
scale = Vector2(0.35, 0.45)
texture = ExtResource("12")
offset = Vector2(-512, 0)

[node name="AiThinkingTimer" type="Timer" parent="QueueController"]
wait_time = 2.0
one_shot = true
